Name:               frp-pong
Version:            0.1
Synopsis:           A simple (and incomplete) pong clone using FRP
License:            MIT
License-file:       LICENSE
Author:             Sami Hangaslammi
Maintainer:         Sami Hangaslammi <shang@iki.fi>
Build-Type:         Simple
Cabal-Version:      >=1.2

Executable frpong
    Main-is:            frpong.hs
    Build-Depends:      base >= 4, transformers >= 0.2.2.0,
                        mtl >= 2.0.1.0, GLUT >= 2.1.2.1,
                        containers >= 0.3.0.0, OpenGL >= 2.2.3.0,
                        time >= 1.1.4

